tests/ui/read_macros/select_and_include.stderr
error: Failed to parse schema: Schema file 'prax/schema.prax' not found. Searched in:
         - CARGO_MANIFEST_DIR/prax/schema.prax
         - (absolute) prax/schema.prax
         - (current_dir) prax/schema.prax
 --> tests/ui/read_macros/select_and_include.rs:3:1
  |
3 | prax_orm::prax_schema!("prax/schema.prax");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `prax_orm::prax_schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `select` and `include` are mutually exclusive — choose one
 --> tests/ui/read_macros/select_and_include.rs:8:9
  |
8 |         select: { id: true },
  |         ^^^^^^
